--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <!-- Хедер -->
     <header>
       <nav>
-        <a href="">Web Studio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="" class="logo">Web <span class="logo-studio">Studio</span></a>
+        <ul class="site-nav">
+          <li><a href="" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
 
-        <ul>
+        <ul class="contact-nav">
           <li>
-            <a href="mailto:info@devstudio.com">
+            <a href="mailto:info@devstudio.com" class="link">
               <img src="./images/envelope.svg" alt="изображение конверта" />
               info@devstudio.com
             </a>
           </li>
           <li>
-            <a href="tel:+380961111111">
+            <a href="tel:+380961111111" class="link">
               <img src="./images/smartphone.svg" alt="изображение смартфона" />
               +38 096 111 11 11
             </a>
@@ -37,42 +37,42 @@
 
     <main>
       <!-- Герои -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <a href="">Заказать услугу</a>
       </section>
 
       <!-- Преимущества компании -->
-      <section>
-        <h2>Преимущества компании</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Преимущества компании</h2>
+        <ul class="feature-list">
           <li>
-            <img src="./images/antenna_black.svg" alt="изображение антенны" />
-            <h3>Внимание к деталям</h3>
+            <img src="./images/antenna_black.svg" alt="изображение антенны" class="icon" />
+            <h3 class="title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <img src="./images/clock.svg" alt="изображение часов" />
-            <h3>Пунктуальность</h3>
+            <img src="./images/clock.svg" alt="изображение часов" class="icon" />
+            <h3 class="title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <img src="./images/diagram.svg" alt="изображение диаграммы" />
-            <h3>Планирование</h3>
+            <img src="./images/diagram.svg" alt="изображение диаграммы" class="icon" />
+            <h3 class="title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <img src="./images/astronaut.svg" alt="изображение астронавта" />
-            <h3>Современные технологии</h3>
+            <img src="./images/astronaut.svg" alt="изображение астронавта" class="icon" />
+            <h3 class="title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -82,8 +82,8 @@
       </section>
 
       <!-- Услуги компании -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -93,7 +93,7 @@
               height="300"
             />
             <a href="">
-              <h3>Десктопные приложения</h3>
+              <h3 class="service-title">Десктопные приложения</h3>
             </a>
           </li>
           <li>
@@ -104,7 +104,7 @@
               height="300"
             />
             <a href="">
-              <h3>Мобильные приложения</h3>
+              <h3 class="service-title">Мобильные приложения</h3>
             </a>
           </li>
           <li>
@@ -115,15 +115,15 @@
               height="300"
             />
             <a href="">
-              <h3>Дизайнерские решения</h3>
+              <h3 class="service-title">Дизайнерские решения</h3>
             </a>
           </li>
         </ul>
       </section>
 
       <!-- Команда -->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <a href="">
@@ -133,7 +133,7 @@
                 width="280"
                 height="260"
               />
-              <h3>John Smith</h3>
+              <h3 class="team-title">John Smith</h3>
             </a>
             <p>Product Designer</p>
             <ul>
@@ -167,7 +167,7 @@
                 width="280"
                 height="260"
               />
-              <h3>Marta Stewart</h3>
+              <h3 class="team-title">Marta Stewart</h3>
             </a>
             <p>Frontend Developer</p>
             <ul>
@@ -201,7 +201,7 @@
                 width="280"
                 height="260"
               />
-              <h3>Robert Jakis</h3>
+              <h3 class="team-title">Robert Jakis</h3>
             </a>
             <p>Marketing</p>
             <ul>
@@ -235,7 +235,7 @@
                 width="280"
                 height="260"
               />
-              <h3>Martin Doe</h3>
+              <h3 class="team-title">Martin Doe</h3>
             </a>
             <p>UI Designer</p>
             <ul>
@@ -265,8 +265,8 @@
       </section>
 
       <!-- Клиенты компании -->
-      <section>
-        <h2>Постоянные клиенты</h2>
+      <section class="section">
+        <h2 class="section-title">Постоянные клиенты</h2>
         <ul>
           <li>
             <a href=""
