добавляет порфолио хеддер футтер

--- a/index.html
+++ b/index.html
@@ -138,22 +138,22 @@
             <p>Product Designer</p>
             <ul>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/instagram.svg" alt="логотип инстаграм" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href=""class="social-icon">
                   <img src="./images/twitter.svg" alt="логотип твиттер" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/facebook.svg" alt="логотип фейсбук" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/linkedin.svg" alt="логотип линкедин" />
                 </a>
               </li>
@@ -172,22 +172,22 @@
             <p>Frontend Developer</p>
             <ul>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/instagram.svg" alt="логотип инстаграм" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/twitter.svg" alt="логотип твиттер" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/facebook.svg" alt="логотип фейсбук" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/linkedin.svg" alt="логотип линкедин" />
                 </a>
               </li>
@@ -206,22 +206,22 @@
             <p>Marketing</p>
             <ul>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/instagram.svg" alt="логотип инстаграм" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/twitter.svg" alt="логотип твиттер" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/facebook.svg" alt="логотип фейсбук" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/linkedin.svg" alt="логотип линкедин" />
                 </a>
               </li>
@@ -240,22 +240,22 @@
             <p>UI Designer</p>
             <ul>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/instagram.svg" alt="логотип инстаграм" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/twitter.svg" alt="логотип твиттер" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/facebook.svg" alt="логотип фейсбук" />
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="" class="social-icon">
                   <img src="./images/linkedin.svg" alt="логотип линкедин" />
                 </a>
               </li>
@@ -305,20 +305,20 @@
     <!-- Футер -->
     <footer>
       <div>
-        <a href="">Web Studio</a>
-        <address>
-          г. Киев, пр-т Леси Украинки, 26
-          <a href="mailto:info@example.com">info@example.com</a>
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <a href="" class="logo">Web <span class="logo-studio-footer">Studio</span></a>
+        <address class="address">
+          <span class="address-street">г. Киев, пр-т Леси Украинки, 26</span> 
+          <a href="mailto:info@example.com" class="link">info@example.com</a>
+          <a href="tel:+380991111111" class="phone">+38 099 111 11 11</a>
         </address>
       </div>
       <div>
-        <b>Присоединяйтесь</b>
-        <ul>
-          <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-          <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-          <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-          <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+        <b class="join">Присоединяйтесь</b>
+        <ul class="join-social">
+          <li><a href="" aria-label="Ссылка на Instagram"class="link">Instagram</a></li>
+          <li><a href="" aria-label="Ссылка на Twitter"class="link">Twitter</a></li>
+          <li><a href="" aria-label="Ссылка на Facebook"class="link">Facebook</a></li>
+          <li><a href="" aria-label="Ссылка на LinkedIn"class="link">LinkedIn</a></li>
         </ul>
       </div>
       <!-- <div>
@@ -326,7 +326,7 @@
           <input type="text" placeholder="E-mail" />
           <button type="submit">Подписаться</button>
       </div> -->
-      <p><small>2020 | Developed by GoIT Students</small></p>
+      <p><small class="bottom-text">2020 | Developed by GoIT Students</small></p>
     </footer>
   </body>
 </html>
