--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-</head>
-<body>
-    страница для портфолио
-</body>
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <!-- Хедер -->
+    <header>
+      <nav>
+        <a href="" class="logo">Web <span class="logo-studio">Studio</span></a>
+        <ul class="site-nav">
+          <li><a href="" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
+        </ul>
+
+        <ul class="contact-nav">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link">
+              <img src="./images/envelope.svg" alt="изображение конверта" />
+              info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="link">
+              <img src="./images/smartphone.svg" alt="изображение смартфона" />
+              +38 096 111 11 11
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- Футер -->
+    <footer>
+      <div>
+        <a href="" class="logo"
+          >Web <span class="logo-studio-footer">Studio</span></a
+        >
+        <address class="address">
+          <span class="address-street">г. Киев, пр-т Леси Украинки, 26</span>
+          <a href="mailto:info@example.com" class="link">info@example.com</a>
+          <a href="tel:+380991111111" class="phone">+38 099 111 11 11</a>
+        </address>
+      </div>
+      <div>
+        <b class="join">Присоединяйтесь</b>
+        <ul class="join-social">
+          <li>
+            <a href="" aria-label="Ссылка на Instagram" class="link"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a href="" aria-label="Ссылка на Twitter" class="link">Twitter</a>
+          </li>
+          <li>
+            <a href="" aria-label="Ссылка на Facebook" class="link">Facebook</a>
+          </li>
+          <li>
+            <a href="" aria-label="Ссылка на LinkedIn" class="link">LinkedIn</a>
+          </li>
+        </ul>
+      </div>
+      <!-- <div>
+              <b class="subscribe title">Подписаться на рассылку</b>
+              <input type="text" placeholder="E-mail" />
+              <button type="submit">Подписаться</button>
+          </div> -->
+      <p>
+        <small class="bottom-text">2020 | Developed by GoIT Students</small>
+      </p>
+    </footer>
+  </body>
 </html>
