--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <a href="" class="logo">Web <span class="logo-studio">Studio</span></a>
         <ul class="site-nav">
-          <li><a href="" class="link">Студия</a></li>
+          <li><a href="./index.html" class="link">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
@@ -39,7 +39,7 @@
       <!-- Герои -->
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+        <a href=""class="button">Заказать услугу</a>
       </section>
 
       <!-- Преимущества компании -->
