--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
   <body>
     <!-- Хедер -->
@@ -13,7 +13,7 @@
       <nav>
         <a href="" class="logo">Web <span class="logo-studio">Studio</span></a>
         <ul class="site-nav">
-          <li><a href="" class="link">Студия</a></li>
+          <li><a href="./index.html" class="link">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
@@ -34,6 +34,139 @@
         </ul>
       </nav>
     </header>
+
+    <!-- main section -->
+    <main>
+      <ul>
+        <li><a href="" class="button">Все</a></li>
+        <li><a href="" class="button">Веб-сайты</a></li>
+        <li><a href="" class="button">Приложения</a></li>
+        <li><a href="" class="button">Дизайн</a></li>
+        <li><a href="" class="button">Маркетинг</a></li>
+      </ul>
+      <ul class="project-list">
+        <li>
+          <a href="">
+            <img
+              src="./images/technokryak.png"
+              alt="фото сайта"
+              width="380"
+              height="295"
+            />
+            <h2 class="title">Технокряк</h2>
+          </a>
+          <p>Веб-сайт</p>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/poster.png"
+              alt="спортивные команды"
+              width="380"
+              height="295"
+            />
+            <h2 class="title">Постер New Orlean vs Golden Stars</h2>
+          </a>
+          <p>Дизайн</p>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/poster.png"
+              alt="спортивные команды"
+              width="380"
+              height="295"
+            />
+            <h2 class="title">Постер New Orlean vs Golden Stars</h2>
+          </a>
+          <p>Дизайн</p>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/seafood.png"
+              alt="постер ресторана"
+              width="380"
+              height="295"
+            />
+            <h2 class="title">Ресторан Seafood</h2>
+          </a>
+          <p>Приложение</p>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/prime.png"
+              alt="изображение наушников"
+              width="380"
+              height="295"
+            />
+            <h2 class="title">Проект Prime</h2>
+          </a>
+          <p>Маркетинг</p>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/boxes.png"
+              alt="изображение коробок"
+              width="380"
+              height="295"
+            />
+            <h2 class="title">Проект Boxes</h2>
+          </a>
+          <p>Приложение</p>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/inspiration.png"
+              alt="изображение монитора"
+              width="380"
+              height="295"
+            />
+            <h2 class="title">Inspiration has no Borders</h2>
+          </a>
+          <p>Веб-сайт</p>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/edition.png"
+              alt="изображение журнала"
+              width="380"
+              height="295"
+            />
+            <h2 class="title">Издание Limited Edition</h2>
+          </a>
+          <p>Дизайн</p>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/lab.png"
+              alt="изображение этикетки"
+              width="380"
+              height="295"
+            />
+            <h2 class="title">Проект LAB</h2>
+          </a>
+          <p>Маркетинг</p>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/business.png"
+              alt="изображение ноутбука"
+              width="380"
+              height="295"
+            />
+            <h2 class="title">Growing Business</h2>
+          </a>
+          <p>Приложение</p>
+        </li>
+      </ul>
+    </main>
 
     <!-- Футер -->
     <footer>
