--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700|Roboto:400,500,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -84,7 +85,7 @@
       <!-- Услуги компании -->
       <section class="section">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="service-list">
           <li>
             <img
               src="./images/computer.png"
@@ -124,11 +125,11 @@
       <!-- Команда -->
       <section class="section">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
+        <ul class="team-list">
           <li>
             <a href="">
               <img
-                src="./images/Smith.png"
+                src="./images/smith.jpg"
                 alt="фотография члена команды"
                 width="280"
                 height="260"
@@ -136,7 +137,7 @@
               <h3 class="team-title">John Smith</h3>
             </a>
             <p>Product Designer</p>
-            <ul>
+            <ul class="social-list">
               <li>
                 <a href="" class="social-icon">
                   <img src="./images/instagram.svg" alt="логотип инстаграм" />
@@ -162,7 +163,7 @@
           <li>
             <a href="">
               <img
-                src="./images/stewart.png"
+                src="./images/stewart.jpg"
                 alt="фотография члена команды"
                 width="280"
                 height="260"
@@ -170,7 +171,7 @@
               <h3 class="team-title">Marta Stewart</h3>
             </a>
             <p>Frontend Developer</p>
-            <ul>
+            <ul class="social-list">
               <li>
                 <a href="" class="social-icon">
                   <img src="./images/instagram.svg" alt="логотип инстаграм" />
@@ -196,7 +197,7 @@
           <li>
             <a href="">
               <img
-                src="./images/jakis.png"
+                src="./images/jakis.jpg"
                 alt="фотография члена команды"
                 width="280"
                 height="260"
@@ -204,7 +205,7 @@
               <h3 class="team-title">Robert Jakis</h3>
             </a>
             <p>Marketing</p>
-            <ul>
+            <ul class="social-list">
               <li>
                 <a href="" class="social-icon">
                   <img src="./images/instagram.svg" alt="логотип инстаграм" />
@@ -230,7 +231,7 @@
           <li>
             <a href="">
               <img
-                src="./images/doe.png"
+                src="./images/doe.jpg"
                 alt="фотография члена команды"
                 width="280"
                 height="260"
@@ -238,7 +239,7 @@
               <h3 class="team-title">Martin Doe</h3>
             </a>
             <p>UI Designer</p>
-            <ul>
+            <ul class="social-list">
               <li>
                 <a href="" class="social-icon">
                   <img src="./images/instagram.svg" alt="логотип инстаграм" />
@@ -267,7 +268,7 @@
       <!-- Клиенты компании -->
       <section class="section">
         <h2 class="section-title">Постоянные клиенты</h2>
-        <ul>
+        <ul class="client-list">
           <li>
             <a href=""
               ><img src="./images/logo1.png" alt="логотип компании"
