--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:700|Roboto:400,500,700,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
@@ -37,133 +41,158 @@
 
     <!-- main section -->
     <main>
-      <ul>
-        <li><a href="" class="button">Все</a></li>
-        <li><a href="" class="button">Веб-сайты</a></li>
-        <li><a href="" class="button">Приложения</a></li>
-        <li><a href="" class="button">Дизайн</a></li>
-        <li><a href="" class="button">Маркетинг</a></li>
+      <ul class="service-list">
+        <li><button>Все</button></li>
+        <li><button>Веб-сайты</button></li>
+        <li><button>Приложения</button></li>
+        <li><button>Дизайн</button></li>
+        <li><button>Маркетинг</button></li>
       </ul>
       <ul class="project-list">
         <li>
           <a href="">
             <img
-              src="./images/technokryak.png"
+              src="./images/technokryak.jpg"
               alt="фото сайта"
               width="380"
               height="295"
             />
             <h2 class="title">Технокряк</h2>
+            <p>Веб-сайт</p>
+            <p>
+              Технокряк это современная площадка распространения коронавируса.
+              Компании используют эту платформу для цифрового шпионажа и атак на
+              защищённые сервера конкурентов.
+            </p>
           </a>
-          <p>Веб-сайт</p>
         </li>
         <li>
           <a href="">
             <img
-              src="./images/poster.png"
+              src="./images/poster.jpg"
               alt="спортивные команды"
               width="380"
               height="295"
             />
             <h2 class="title">Постер New Orlean vs Golden Stars</h2>
+            <p>Дизайн</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab,
+              nostrum?
+            </p>
           </a>
-          <p>Дизайн</p>
         </li>
         <li>
           <a href="">
             <img
-              src="./images/poster.png"
-              alt="спортивные команды"
-              width="380"
-              height="295"
-            />
-            <h2 class="title">Постер New Orlean vs Golden Stars</h2>
-          </a>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/seafood.png"
+              src="./images/seafood.jpg"
               alt="постер ресторана"
               width="380"
               height="295"
             />
             <h2 class="title">Ресторан Seafood</h2>
+            <p>Приложение</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur, neque?
+            </p>
           </a>
-          <p>Приложение</p>
         </li>
         <li>
           <a href="">
             <img
-              src="./images/prime.png"
+              src="./images/prime.jpg"
               alt="изображение наушников"
               width="380"
               height="295"
             />
             <h2 class="title">Проект Prime</h2>
+            <p>Маркетинг</p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non,
+              aliquid.
+            </p>
           </a>
-          <p>Маркетинг</p>
         </li>
         <li>
           <a href="">
             <img
-              src="./images/boxes.png"
+              src="./images/boxes.jpg"
               alt="изображение коробок"
               width="380"
               height="295"
             />
             <h2 class="title">Проект Boxes</h2>
+            <p>Приложение</p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos,
+              eaque.
+            </p>
           </a>
-          <p>Приложение</p>
         </li>
         <li>
           <a href="">
             <img
-              src="./images/inspiration.png"
+              src="./images/inspiration.jpg"
               alt="изображение монитора"
               width="380"
               height="295"
             />
             <h2 class="title">Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
+              neque.
+            </p>
           </a>
-          <p>Веб-сайт</p>
         </li>
         <li>
           <a href="">
             <img
-              src="./images/edition.png"
+              src="./images/edition.jpg"
               alt="изображение журнала"
               width="380"
               height="295"
             />
             <h2 class="title">Издание Limited Edition</h2>
+            <p>Дизайн</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Distinctio, minus!
+            </p>
           </a>
-          <p>Дизайн</p>
         </li>
         <li>
           <a href="">
             <img
-              src="./images/lab.png"
+              src="./images/lab.jpg"
               alt="изображение этикетки"
               width="380"
               height="295"
             />
             <h2 class="title">Проект LAB</h2>
+            <p>Маркетинг</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
+              omnis!
+            </p>
           </a>
-          <p>Маркетинг</p>
         </li>
         <li>
           <a href="">
             <img
-              src="./images/business.png"
+              src="./images/business.jpg"
               alt="изображение ноутбука"
               width="380"
               height="295"
             />
             <h2 class="title">Growing Business</h2>
+            <p>Приложение</p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae, consectetur.
+            </p>
           </a>
-          <p>Приложение</p>
         </li>
       </ul>
     </main>
