--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li>
             <img src="./images/antenna_black.svg" alt="изображение антенны" class="icon" />
             <h3 class="title">Внимание к деталям</h3>
-            <p>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
@@ -58,7 +58,7 @@
           <li>
             <img src="./images/clock.svg" alt="изображение часов" class="icon" />
             <h3 class="title">Пунктуальность</h3>
-            <p>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
@@ -66,7 +66,7 @@
           <li>
             <img src="./images/diagram.svg" alt="изображение диаграммы" class="icon" />
             <h3 class="title">Планирование</h3>
-            <p>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
@@ -74,7 +74,7 @@
           <li>
             <img src="./images/astronaut.svg" alt="изображение астронавта" class="icon" />
             <h3 class="title">Современные технологии</h3>
-            <p>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -88,7 +88,7 @@
         <ul class="service-list">
           <li>
             <img
-              src="./images/computer.png"
+              src="./images/computer.jpg"
               alt="Изображение ноутбука"
               width="380"
               height="300"
@@ -99,7 +99,7 @@
           </li>
           <li>
             <img
-              src="./images/phone.png"
+              src="./images/phone.jpg"
               alt="Изображение смартфона"
               width="380"
               height="300"
@@ -110,7 +110,7 @@
           </li>
           <li>
             <img
-              src="./images/display.png"
+              src="./images/display.jpg"
               alt="Изображение дисплея"
               width="380"
               height="300"
@@ -136,7 +136,7 @@
               />
               <h3 class="team-title">John Smith</h3>
             </a>
-            <p>Product Designer</p>
+            <p class="text">Product Designer</p>
             <ul class="social-list">
               <li>
                 <a href="" class="social-icon">
@@ -170,7 +170,7 @@
               />
               <h3 class="team-title">Marta Stewart</h3>
             </a>
-            <p>Frontend Developer</p>
+            <p class="text">Frontend Developer</p>
             <ul class="social-list">
               <li>
                 <a href="" class="social-icon">
@@ -204,7 +204,7 @@
               />
               <h3 class="team-title">Robert Jakis</h3>
             </a>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
             <ul class="social-list">
               <li>
                 <a href="" class="social-icon">
@@ -238,7 +238,7 @@
               />
               <h3 class="team-title">Martin Doe</h3>
             </a>
-            <p>UI Designer</p>
+            <p class="text">UI Designer</p>
             <ul class="social-list">
               <li>
                 <a href="" class="social-icon">
