--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
       </ul>
       <ul class="project-list">
         <li>
-          <a href="">
+          <a href="" class="link">
             <img
               src="./images/technokryak.jpg"
               alt="фото сайта"
@@ -58,8 +58,8 @@
               height="295"
             />
             <h2 class="title">Технокряк</h2>
-            <p>Веб-сайт</p>
-            <p>
+            <p class="type">Веб-сайт</p>
+            <p class="text">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -67,7 +67,7 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img
               src="./images/poster.jpg"
               alt="спортивные команды"
@@ -75,15 +75,15 @@
               height="295"
             />
             <h2 class="title">Постер New Orlean vs Golden Stars</h2>
-            <p>Дизайн</p>
-            <p>
+            <p class="type">Дизайн</p>
+            <p class="text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab,
               nostrum?
             </p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img
               src="./images/seafood.jpg"
               alt="постер ресторана"
@@ -91,15 +91,15 @@
               height="295"
             />
             <h2 class="title">Ресторан Seafood</h2>
-            <p>Приложение</p>
-            <p>
+            <p class="type">Приложение</p>
+            <p class="text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Aspernatur, neque?
             </p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img
               src="./images/prime.jpg"
               alt="изображение наушников"
@@ -107,15 +107,15 @@
               height="295"
             />
             <h2 class="title">Проект Prime</h2>
-            <p>Маркетинг</p>
-            <p>
+            <p class="type">Маркетинг</p>
+            <p class="text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non,
               aliquid.
             </p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img
               src="./images/boxes.jpg"
               alt="изображение коробок"
@@ -123,15 +123,15 @@
               height="295"
             />
             <h2 class="title">Проект Boxes</h2>
-            <p>Приложение</p>
-            <p>
+            <p class="type">Приложение</p>
+            <p class="text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos,
               eaque.
             </p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img
               src="./images/inspiration.jpg"
               alt="изображение монитора"
@@ -139,15 +139,15 @@
               height="295"
             />
             <h2 class="title">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-            <p>
+            <p class="type">Веб-сайт</p>
+            <p class="text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
               neque.
             </p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img
               src="./images/edition.jpg"
               alt="изображение журнала"
@@ -155,15 +155,15 @@
               height="295"
             />
             <h2 class="title">Издание Limited Edition</h2>
-            <p>Дизайн</p>
-            <p>
+            <p class="type">Дизайн</p>
+            <p class="text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Distinctio, minus!
             </p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img
               src="./images/lab.jpg"
               alt="изображение этикетки"
@@ -171,15 +171,15 @@
               height="295"
             />
             <h2 class="title">Проект LAB</h2>
-            <p>Маркетинг</p>
-            <p>
+            <p class="type">Маркетинг</p>
+            <p class="text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
               omnis!
             </p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="link">
             <img
               src="./images/business.jpg"
               alt="изображение ноутбука"
@@ -187,8 +187,8 @@
               height="295"
             />
             <h2 class="title">Growing Business</h2>
-            <p>Приложение</p>
-            <p>
+            <p class="type">Приложение</p>
+            <p class="text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Repudiandae, consectetur.
             </p>
